--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -13,7 +14,27 @@
 </head>
 <body>
     <div id="app">
-        <h2>{{message}}</h2>
+        <header class="container text-center p-3">
+            <h1>Todo List</h1>
+        </header>
+
+        <main class="container">
+
+            <div class="item col-12 d-flex justify-content-between align-items-center p-4">
+                <h3 class="text"></h3>
+                <div class="done">
+                    <i class="fa-solid fa-trash"></i>
+                </div>
+            </div>
+
+            <form class="mt-2" action="">
+                <input class="p-2 mx-2" type="text" name="newItem" id="newItem" placeholder="Inserisci una nuova task">
+                <button class="btn btn-primary p-2">Inserisci</button>
+            </form>
+
+
+        </main>
+
     </div>
 </body>
 </html>
