Aggiunto axios per chiamare il server e prendere l'array in data.json

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <main class="container">
 
-            <div class="item col-12 d-flex justify-content-between align-items-center p-4">
-                <h3 class="text"></h3>
+            <div class="item col-12 d-flex justify-content-between align-items-center p-4" v-for="(item, index) in taskList" :key="index">
+                <h3 class="text">{{item.text}}</h3>
                 <div class="done">
                     <i class="fa-solid fa-trash"></i>
                 </div>
