--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
         <main class="container">
 
-            <div class="item col-12 d-flex justify-content-between align-items-center p-4" v-for="(item, index) in taskList" :key="index">
-                <h3 class="text">{{item.text}}</h3>
+            <div class="item col-12 d-flex justify-content-between align-items-center p-4" v-for="(item, index) in todoList" :key="index">
+                <h3 class="text" :class=" item.done ? 'done' : '' ">{{item.text}}</h3>
                 <div class="done">
                     <i class="fa-solid fa-trash"></i>
                 </div>
             </div>
 
             <form class="mt-2" action="">
-                <input class="p-2 mx-2" type="text" name="newItem" id="newItem" placeholder="Inserisci una nuova task">
-                <button class="btn btn-primary p-2">Inserisci</button>
+                <input class="p-2 mx-2" type="text" name="newItem" id="newItem" placeholder="Inserisci una nuova task" v-model="newTodoText">
+                <button class="btn btn-primary p-2" @click="addToDo()">Inserisci</button>
             </form>
 
 
