--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <main class="container">
 
             <div class="item col-12 d-flex justify-content-between align-items-center p-4" v-for="(item, index) in todoList" :key="index">
-                <h3 class="text" :class=" item.done ? 'done' : '' ">{{item.text}}</h3>
+                <h3 class="text" :class=" item.done ? 'done' : '' " @click="toggleTodo(index)">{{item.text}}</h3>
                 <div class="done">
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-trash" @click="deleteToDo(index)"></i>
                 </div>
             </div>
 
             <form class="mt-2" action="">
-                <input class="p-2 mx-2" type="text" name="newItem" id="newItem" placeholder="Inserisci una nuova task" v-model="newTodoText">
+                <input class="p-2 mx-2" type="text" name="newItem" id="newItem" placeholder="Inserisci una nuova task" v-model="newTodoText" name="newTodoText">
                 <button class="btn btn-primary p-2" @click="addToDo()">Inserisci</button>
             </form>
 
